refactor tests and utilities for consistency